--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>写字板</title>
     <script src="jquery-2.1.3.min.js" type="text/javascript"></script>
     <link href="handwriting.css" rel="stylesheet" type="text/css"/>
+    <style>
+    </style>
     <meta name="viewport"
           content=" height = device-height,
                     width = device-width,
@@ -14,10 +16,14 @@
                     user-scalable = no"/>
 </head>
 <body>
-
+<div class="canvas">
+    <canvas id="canvas1">
+         您的浏览器不支持canvas
+    </canvas>
     <canvas id="canvas">
         您的浏览器不支持canvas
     </canvas>
+</div>
     <div id="controller">
         <div id="black_btn" class="color_btn color_btn_selected"></div>
         <div id="blue_btn" class="color_btn"></div>
@@ -27,6 +33,7 @@
         <div id="yellow_btn" class="color_btn"></div>
 
         <div id="clear_btn" class="op_btn">清 除</div>
+        <div id="baocun" class="op_btn">保 存</div>
         <div class="clearfix"></div>
     </div>
 
